--- a/html/header.html
+++ b/html/header.html
@@ -5,9 +5,6 @@
         document.getElementById(cookie).setAttribute("style", "background-color: var(--link-visited)");
     }
 </script>
-<header>
-    <p>Charles Martin</p>
-</header>
 <nav>
     <span>
         <script>
@@ -15,8 +12,8 @@
                 createCookie(navClick, id, 1000);
             }
         </script>
-        <a id="nav-index" href="index.php" onClick="onNavClick('nav-index')"><p>Home</p></a>
-        <a id="nav-projects" href="projects.php" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
+        <a id="nav-index" href="index.html" onClick="onNavClick('nav-index')"><p>Home</p></a>
+        <a id="nav-projects" href="projects.html" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
         <a href="#"><p>About</p></a>
     </span>
 </nav>
