24w12d: CSS and More Info on Pages

--- a/html/header.html
+++ b/html/header.html
@@ -6,7 +6,7 @@
     }
 </script>
 <nav>
-    <span>
+    <span class="acrylic">
         <script>
             function onNavClick(id){
                 createCookie(navClick, id, 1000);
@@ -14,6 +14,7 @@
         </script>
         <a id="nav-index" href="index.html" onClick="onNavClick('nav-index')"><p>Home</p></a>
         <a id="nav-projects" href="projects.html" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
+        <a id="nav-studies" href="studies.html" onClick="onNavClick('nav-studies')"><p>Studies</p></a>
         <a href="#"><p>About</p></a>
     </span>
 </nav>
