--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
@@ -20,21 +21,17 @@
                 <img id="introduction-image" src="../res/img/Question Mark.png" alt="Charles Martin's Image on Introduction Section of Page.">
                 <section id="introduction-content">
                     <h2>Charles Martin</h2>
-                    <p>Software Developer</p>
+                    <p>Software Developer - Specialized on Native Applications</p>
                 </section>
             </div>
             <h2>About Me</h2>
-            <p>I am a student who spends time to code and aspiring to become a software developer,
+            <p>A Computer Science student who aspires to become a software developer,
                 especially on native applications with C++, C#, or Java.
             </p>
-            <h3>Software & Technologies Used:</h3>
+            <h3>Software Used:</h3>
             <ul>
                 <li><p><b>Code::Blocks, since 2018</b></p></li>
                 <li><p>Visual Studio, since 2018</p></li>
-                <ul>
-                    <li><p>UWP since 2023</p></li>
-                    <li><p>WPF since 2024</p></li>
-                </ul>
                 <li><p>Notepad++, since 2019</p></li>
                     <li><p>Used for lightweight coding and minor editing</p></li>
                 <li><p>GitHub, since 2020</p></li>
@@ -49,6 +46,18 @@
                 <li><p>Android Studio, since 2023</p></li>
                 <li><p>Jekyll, since 2024</p></li>
                 <li><p>IntelliJ, since 2024</p></li>
+            </ul>
+            <h3>Technologies Used:</h3>
+            <ul>
+                <li><h4>Win32 API on 2021</h4></li>
+                <li><h4>SFML since 2021</h4></li>
+                <li><h4>Android SDK (Java) since 2022</h4></li>
+                <li><h4>.NET</h4></li>
+                <ul>
+                    <li><p>UWP since 2023</p></li>
+                    <li><p>WPF since 2024</p></li>
+                </ul>
+                <li><h4>Laravel since 2024</h4></li>
             </ul>
 
             <h2>Skills</h2>
