--- a/html/projects.html
+++ b/html/projects.html
@@ -16,6 +16,51 @@
             
         </span>
         <section id="content">
+            <h2>Self-Projects (Hobbies)</h2>
+            <div class="project">
+                <img class="backdrop" id="backdrop-1" src="../res/img/Coding Clipart.png">
+                <section class="project-content">
+                    <h3>Game: Militia SFML</h3>
+                    <p>August 2021-Present</p>
+                    <ul>
+                        <li><p>This game contains large amount of code and implementation of skills
+                        and knowledge in software development, including MVC Architecture, Client-
+                        Server Architecture, Observer Pattern, Abstract Factory Pattern, and more.</p></li>
+                        <li><p>This game also consists of features such as UI framework, Game Engine,
+                            and more.
+                        </p></li>
+                        <li><p>This game has a lengthy development progress to ensure maintainable
+                            codebase before implementing actual gameplay features and avoid technical debt.
+                        </p></li>
+                        <ul>
+                            <li><p>C++</p></li>
+                            <li><p>SFML</p></li>
+                        </ul>
+                    </ul>
+                   
+                </section>
+                <section class="project-content">
+                    <h3>App: EightQueensPuzzle</h3>
+                    <p>February 2024-Present</p>
+                    <ul>
+                        <li><p>This app strives to solve the eight queens problem.</p></li>
+                        <li><p>This app is derived from Militia SFML. It uses the same
+                            technologies but with unique features such as multithreading.
+                        </p></li>
+                    </ul>
+                </section>
+            </div>
+            <div class="project">
+                <section class="project-content">
+                    <h3>App: UUID Generator</h3>
+                    <p>Early 2021</p>
+                    <ul>
+                        <li><p>C</p></li>
+                        <li><p>C++</p></li>
+                        <li><p>Win32 API.</p></li>
+                    </ul>
+                </section>
+            </div>
             <h2>School Projects</h2>
             <div class="project">
                 <img class="backdrop" id="backdrop-1" src="../res/img/Web Icon with Mouse Pointer.png">
@@ -29,29 +74,6 @@
                         <li><p>JavaScript</p></li>
                         <li><p>XML</p></li>
                         <li><p>SQL</p></li>
-                    </ul>
-                </section>
-            </div>
-            <h2>Self-Projects (Hobbies)</h2>
-            <div class="project">
-                <img class="backdrop" id="backdrop-1" src="../res/img/Coding Clipart.png">
-                <section class="project-content">
-                    <h3>Game: Militia SFML</h3>
-                    <p>August 2021-Present</p>
-                    <li><p>This game contains large amount of code and application of skills and knowledge in programming.</p></li>
-                    <ul>
-                        <li><p>C++</p></li>
-                    </ul> 
-                </section>
-            </div>
-            <div class="project">
-                <section class="project-content">
-                    <h3>App: UUID Generator</h3>
-                    <p>Early 2021</p>
-                    <ul>
-                        <li><p>C</p></li>
-                        <li><p>C++</p></li>
-                        <li><p>This program uses Win32 API.</p></li>
                     </ul>
                 </section>
             </div>
