--- a/html/index.html
+++ b/html/index.html
@@ -8,12 +8,11 @@
         <script src="../js/script.js"></script>
     </head>
     <body>
-        <h1>Portfolio in progress...</h1>
         <script>
-            loadPagePart('header.html', 'toolbar');
+            loadPagePart('header.html', 'header');
             loadPagePart('footer.html', 'footer');
         </script>
-        <span id="toolbar">
+        <span id="header">
             
         </span>
         <section id="content">
