--- a/html/projects.html
+++ b/html/projects.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8"/>
         <title>Charles Martin's Projects</title>
+        <link rel="stylesheet" href="../css/items.css" type="text/css"/>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
         <link rel="stylesheet" href="../css/projects.css" type="text/css"/>
         <script src="../js/script.js"></script>
-        <script>
-            loadPagePart('header.html', 'toolbar');
-            loadPagePart('footer.html', 'footer');
-        </script>
     </head>
     <body>
-        <span id="toolbar">
+        <script>
+            loadPagePart('header.html', 'header');
+            loadPagePart('footer.html', 'footer');
+        </script>
+        <span id="header">
             
         </span>
         <section id="content">
