--- a/html/studies.html
+++ b/html/studies.html
@@ -5,13 +5,13 @@
         <title>Charles Martin's Projects</title>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
         <script src="../js/script.js"></script>
-        <script>
-            loadPagePart('header.html', 'toolbar');
-            loadPagePart('footer.html', 'footer');
-        </script>
     </head>
     <body>
-        <span id="toolbar">
+        <script>
+            loadPagePart('header.html', 'header');
+            loadPagePart('footer.html', 'footer');
+        </script>
+        <span id="header">
             
         </span>
         <section id="content">
