24w12f: Projects Page Overhaul

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <p id="footer-copyright-info">No Content</p>
+    <p id="footer-copyright-info">Footer (Coming Soon)</p>
 </footer>
 
 <script>
