--- a/html/projects.html
+++ b/html/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
         <title>Charles Martin's Projects</title>
         <link rel="stylesheet" href="../css/items.css" type="text/css"/>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
@@ -28,8 +28,8 @@
                         <p>August 2021-Present</p>
                         <ul>
                             <li><p>This game contains large amount of code and implementation of skills
-                            and knowledge in software development, including MVC Architecture, Client-
-                            Server Architecture, Observer Pattern, Abstract Factory Pattern, and more.</p></li>
+                            and knowledge in software development, including MVC Architecture, Client-Server
+                            Architecture, Observer Pattern, Abstract Factory Pattern, and more.</p></li>
                             <li><p>This game also consists of features such as UI framework, Game Engine,
                                 and more.
                             </p></li>
