--- a/html/login.html
+++ b/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
         <title>Log in or Sign up</title>
         <link rel="stylesheet" href="../css/style.css" type="text/css"/>
         <script src="../js/script.js"></script>
