24w13d: Increase Item Div Usage

--- a/html/header.html
+++ b/html/header.html
@@ -11,7 +11,8 @@
             <a id="nav-menu" class="nav-dropdown"><p>Menu</p></a>
             <span id="nav-dropdown-content">
                 <a href="#"><p>About</p></a>
-                <a id="nav-studies" href="studies.html" onClick="onNavClick('nav-studies')"><p>Studies</p></a>
+                <!-- <a id="nav-studies" href="studies.html" onClick="onNavClick('nav-studies')"><p>Studies</p></a> -->
+                <a id="nav-resume" href="resume.html" onClick="onNavClick('nav-resume')"><p>Resume</p></a>
                 <a id="nav-projects" href="projects.html" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
                 <a id="nav-index" href="index.html" onClick="onNavClick('nav-index')"><p>Home</p></a>
             </span>
