--- a/html/projects.html
+++ b/html/projects.html
@@ -24,7 +24,7 @@
                     <img class="item-image" id="item-image-1" src="../res/img/projects/militiaSFML.png">
                     <!-- <img class="backdrop" id="backdrop-1" src="../res/img/Coding Clipart.png"> -->
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">Game: Militia SFML</h3>
+                        <h3 class="title">Game: Militia SFML (CLOSED SOURCE)</h3>
                         <p>August 2021-Present</p>
                         <ul>
                             <li><p>This game contains large amount of code and implementation of skills
@@ -42,13 +42,14 @@
                                 <li><p>SFML</p></li>
                             </ul>
                             <li><p>Is accompanied with a website called Militia SFML Documentation.</p></li>
+                            <button>Request Code</button>
                         </ul>
                     </section>
                 </div>
                 <div class="project item">
                     <img class="item-image" id="item-image-2" src="../res/img/projects/eightQueensPuzzle.png">
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">App: EightQueensPuzzle</h3>
+                        <h3 class="title">App: EightQueensPuzzle (CLOSED SOURCE)</h3>
                         <p>February 2024-Present</p>
                         <ul>
                             <li><p>This app strives to solve the eight queens problem.</p></li>
@@ -58,6 +59,7 @@
                             <ul>
                                 <li><p>Unique features are soon to be merged with DzergeroEngine.</p></li>
                             </ul>
+                            <button>Request Code</button>
                         </ul>
                     </section>
                 </div>
@@ -72,13 +74,14 @@
                             <li><p>C++</p></li>
                             <li><p>Win32 API.</p></li>
                         </ul>
+                        <button onclick="navOnNewtab('https://github.com/PhrotonX/UUID-Generator')">View on GitHub</button>
                     </section>
                 </div>
                 <div class="project item">
                     <img class="item-image" id="item-image-4" src="../res/img/projects/comparts.jpeg">
                     <!-- <img class="backdrop" id="backdrop-1" src="../res/img/Web Icon with Mouse Pointer.png"> -->
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">Website: ComParts (School Project)</h3>
+                        <h3 class="title">Website: ComParts (School Project) (CLOSED SOURCE)</h3>
                         <p>January 2022-April 2022</p>
                         <ul>
                             <li><p>HTML</p></li>
@@ -98,12 +101,13 @@
                         <ul>
                             <li><p>Is built on Laravel.</p></li>
                         </ul>
+                        <button onclick="navOnNewtab('https://github.com/PhrotonX/webLog')">View on GitHub</button>
                     </section>
                 </div>
                 <div class="project item">
                     <img class="item-image" id="item-image-6" src="../res/img/Coding Clipart.png">
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">App: Notes for Android (Coming Soon)</h3>
+                        <h3 class="title">App: Notes for Android (Coming Soon)(CLOSED SOURCE)</h3>
                         <p>February 2024-Present</p>
                         <ul>
                             <li><p>Is built on Android SDK with Java.</p></li>
@@ -113,7 +117,7 @@
                 <div class="project item">
                     <img class="item-image" id="item-image-7" src="../res/img/Coding Clipart.png">
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">App: Xlintax (Coming Soon)</h3>
+                        <h3 class="title">App: Xlintax (Coming Soon)(CLOSED SOURCE)</h3>
                         <p>March 2024-Present</p>
                         <ul>
                             <li><p>Is built on .NET UWP.</p></li>
@@ -121,6 +125,7 @@
                                 <li><p>Soon to be migrated to WinUI 3.</p></li>
                             </ul>
                         </ul>
+                        <button>Request Code</button>
                     </section>
                 </div>
                 <div class="project item">
