24w14a: Add Item Block and more privacy info

--- a/html/projects.html
+++ b/html/projects.html
@@ -42,8 +42,10 @@
                                 <li><p>SFML</p></li>
                             </ul>
                             <li><p>Is accompanied with a website called Militia SFML Documentation.</p></li>
-                            <button>Request Code</button>
                         </ul>
+                        <p>Any screenshots of this section must be used in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
+                        <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";'>Learn more about R.A. 10173</button>
+                        <button>Request Code</button>
                     </section>
                 </div>
                 <div class="project item">
@@ -91,6 +93,8 @@
                             <li><p>XML</p></li>
                             <li><p>SQL</p></li>
                         </ul>
+                        <p>Any screenshots of this section must be used in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
+                        <button onclick='window.location.href = "https://privacy.gov.ph/data-privacy-act/";'>Learn more about R.A. 10173</button>
                     </section>
                 </div>
                 <div class="project item">
@@ -125,7 +129,6 @@
                                 <li><p>Soon to be migrated to WinUI 3.</p></li>
                             </ul>
                         </ul>
-                        <button>Request Code</button>
                     </section>
                 </div>
                 <div class="project item">
