--- a/html/resume.html
+++ b/html/resume.html
@@ -17,7 +17,7 @@
         </span>
         <section id="content">
             <div class="resume item">
-                <section class="item-content acrylic parent shadow">
+                <section class="item-block acrylic parent shadow">
                     <h3 class="title">Resume</h3>
                     <p>In order to protect my privacy, the request must be done through email.</p>
                     <p>Please use the resume in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
@@ -26,7 +26,7 @@
                 </section>
             </div>
             <div class="resume item">
-                <section class="item-content acrylic parent shadow">
+                <section class="item-block acrylic parent shadow">
                     <h3 class="title">Curriculum Vitae</h3>
                     <p>In order to protect my privacy, the request must be done through email.</p>
                     <p>Please use the curriculum vitae in accordance to DATA PRIVACY ACT OF 2012 or the REPUBLIC ACT OF 10173. AN ACT PROTECTING INDIVIDUAL PERSONAL INFORMATION IN INFORMATION AND COMMUNICATIONS SYSTEMS IN THE GOVERNMENT AND THE PRIVATE SECTOR, CREATING FOR THIS PURPOSE A NATIONAL PRIVACY COMMISSION, AND FOR OTHER PURPOSES</p>
