--- a/html/projects.html
+++ b/html/projects.html
@@ -21,29 +21,27 @@
         <!-- @NOTE: Move this in a JSON File -->
         <section id="content">
             <!-- <h2>Self-Projects (Hobbies)</h2> -->
-            <div class="projects">
-                <div class="project item" id="project-1">
+            <div id="projects">
+                <!-- <div class="project item" id="project-1">
                     <img class="item-image" id="item-image-1" src="">
-                    <!-- <img class="backdrop" id="backdrop-1" src="../res/img/Coding Clipart.png"> -->
                     <section class="item-content acrylic parent shadow">
                         <h3 class="title"></h3>
                         <p class="date"></p>
                         <ul class="description-list">
                         </ul>
                     </section>
-                </div>
+                </div> -->
                 <!-- <div class="project item">
-                    <img class="item-image" id="item-image-2" src="../res/img/projects/eightQueensPuzzle.png">
+                    <img class="item-image" id="item-image-2" src="">
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">App: EightQueensPuzzle (CLOSED SOURCE)</h3>
+                        <h3 class="title">App: </h3>
                         <p>February 2024-Present</p>
                         <ul>
-                            <li><p>This app strives to solve the eight queens problem.</p></li>
-                            <li><p>This app is derived from Militia SFML. It uses the same
-                                technologies but with unique features such as multithreading.
+                            <li><p></p></li>
+                            <li><p>
                             </p></li>
                             <ul>
-                                <li><p>Unique features are soon to be merged with DzergeroEngine.</p></li>
+                                <li><p></p></li>
                             </ul>
                             <button>Request Code</button>
                         </ul>
@@ -51,16 +49,11 @@
                 </div>
     
                 <div class="project item">
-                    <img class="item-image" id="item-image-3" src="../res/img/projects/uuidGen.png">
+                    <img class="item-image" id="item-image-3" src="">
                     <section class="item-content acrylic parent shadow">
-                        <h3 class="title">App: UUID Generator</h3>
-                        <p>Early 2021</p>
-                        <ul>
-                            <li><p>C</p></li>
-                            <li><p>C++</p></li>
-                            <li><p>Win32 API.</p></li>
-                        </ul>
-                        <button onclick="navOnNewtab('https://github.com/PhrotonX/UUID-Generator')">View on GitHub</button>
+                        <h3 class="title">App: </h3>
+                        
+                        <button onclick="navOnNewtab('')">View on GitHub</button>
                     </section>
                 </div>
                 <div class="project item">
