--- a/html/header.html
+++ b/html/header.html
@@ -10,7 +10,7 @@
         <span class="toolbar">
             <a id="nav-menu" class="nav-dropdown"><p>Menu</p></a>
             <span id="nav-dropdown-content">
-                <a href="#"><p>About</p></a>
+                <a id="nav-about" href="about.html" onClick="onNavClick('nav-about')"><p>About</p></a>
                 <!-- <a id="nav-studies" href="studies.html" onClick="onNavClick('nav-studies')"><p>Studies</p></a> -->
                 <a id="nav-resume" href="resume.html" onClick="onNavClick('nav-resume')"><p>Resume</p></a>
                 <a id="nav-projects" href="projects.html" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
