--- a/html/index.html
+++ b/html/index.html
@@ -20,11 +20,15 @@
             <div class="item">
                 <img class="introduction-image" id="item-image-1" src="../res/img/Question Mark.png">
                 <section class="introduction-content acrylic parent shadow">
-                    <h1 class="title">Charles Martin</h1>
-                    <p class="subtitle">Software Developer - Specialized on Native Applications<p>
-                    <p>A Computer Science student who aspires to become a software developer,
-                        especially on native applications with C++, C#, or Java.
-                    </p>
+                    <div class="plaintext">
+                        <br>
+                        <h1 class="title">Charles Martin</h1>
+                        <p class="subtitle">Software Developer - Specialized on Native Applications<p>
+                        <p>A Computer Science student who aspires to become a software developer,
+                            especially on native applications with C++, C#, or Java.
+                        </p>
+                        <br>
+                    </div>
                 </section>
             </div>
             <!-- <h3>Software Used:</h3>
