--- a/html/about.html
+++ b/html/about.html
@@ -14,10 +14,25 @@
             loadPagePart('footer.html', 'footer');
         </script>
         <span id="header">
-            
+
         </span>
         <section id="content">
-            <h1>About Me.</h1>
+            <div class="plaintext">
+                <h1>About Me.</h1>
+                <ul>
+                    <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
+                    <ul>
+                        <li><p>A total of 6 years of learning experience.</p></li>
+                    </ul>
+                    <li><p>Country: Philippines</p></li>
+                </ul>
+                <h2>About this website</h2>
+                <ul>
+                    <li><p>Built on Jekyll and runs on GitHub.</p></li>
+                    <li><p>This website was first built on mid-2023 and publicly available on 2024.</p></li>
+                </ul>
+            </div>
+            
         </section>
         <section id="footer">
 
