24w16b: Update Index Page

--- a/html/index.html
+++ b/html/index.html
@@ -18,9 +18,13 @@
         </span>
         <section id="content">
             <div class="item">
-                <img class="introduction-image" id="item-image-1" src="../res/img/Question Mark.png">
+                <div class="introduction-hero" > 
+                    <img class="introduction-hero-image" id="item-image-1" src="../res/img/hero.jpg">
+                </div>
+                <br><br>
+                <img class="introduction-image acrylic parent shadow" id="item-image-1" src="../res/img/Question Mark.png">
                 <section class="introduction-content acrylic parent shadow">
-                    <div class="plaintext">
+                    <div class="plaintext dark">
                         <br>
                         <h1 class="title">Charles Martin</h1>
                         <p class="subtitle">Software Developer - Specialized on Native Applications<p>
@@ -74,7 +78,7 @@
             </ul> -->
         </section>
         <section id="footer">
-
+            
         </section>
     </body>
 </html>
