--- a/html/footer.html
+++ b/html/footer.html
@@ -10,5 +10,7 @@
     
 </script>
 <footer onload="loadCopyrightInfo()" id="footer">
-    <p>Copyright @2024</p>
+    <div class="plaintext dark">
+        <p>Copyright @2024</p>
+    </div>
 </footer>
