24w16d: Add code for InfoBox

--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,19 @@
                         </p>
                         <br>
                     </div>
+                    <!-- <div class="infobox acrylic child" id="infobox-0">
+                        <table>
+                            <tr>
+                                <th><p>Title</p></th>
+                            </tr>
+                            <tr>
+                                <td><p>Content</p></td>
+                            </tr>
+                            <tr>
+                                <td><p>Description</p></td>
+                            </tr>
+                        </table>
+                    </div> -->
                 </section>
             </div>
             <!-- <h3>Software Used:</h3>
@@ -78,7 +91,7 @@
             </ul> -->
         </section>
         <section id="footer">
-            
+
         </section>
     </body>
 </html>
