24w16e: Add code for InfoBox, now called Tiles.

--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../css/item.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css">
         <link rel="stylesheet" type="text/css" href="../css/index.css">
+        <link rel="stylesheet" type="text/css" href="../css/elements.css">
         <script src="../js/script.js"></script>
     </head>
     <body>
@@ -31,21 +32,49 @@
                         <p>A Computer Science student who aspires to become a software developer,
                             especially on native applications with C++, C#, or Java.
                         </p>
-                        <br>
                     </div>
-                    <!-- <div class="infobox acrylic child" id="infobox-0">
-                        <table>
-                            <tr>
-                                <th><p>Title</p></th>
-                            </tr>
-                            <tr>
-                                <td><p>Content</p></td>
-                            </tr>
-                            <tr>
-                                <td><p>Description</p></td>
-                            </tr>
-                        </table>
-                    </div> -->
+                    <span class="tiles">
+                        <div class="tile-medium acrylic child" id="tile-0">
+                            <table class="tile-table">
+                                <tr>
+                                    <th class="tile-info acrylic child"><p><b>Clients</b></p></th>
+                                </tr>
+                                <tr>
+                                    <td class="tile-content"><p>0</p></td>
+                                </tr>
+                                <tr>
+                                    <td class="tile-description"><p>I'm seeking for experience</p></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="tile-medium acrylic child" id="tile-1">
+                            <table>
+                                <tr>
+                                    <th><p>Title</p></th>
+                                </tr>
+                                <tr>
+                                    <td><p>Content</p></td>
+                                </tr>
+                                <tr>
+                                    <td><p>Description</p></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="tile-medium acrylic child" id="tile-2">
+                            <table>
+                                <tr>
+                                    <th><p>Title</p></th>
+                                </tr>
+                                <tr>
+                                    <td><p>Content</p></td>
+                                </tr>
+                                <tr>
+                                    <td><p>Description</p></td>
+                                </tr>
+                            </table>
+                        </div>
+                    </span>  
+                    <br>
                 </section>
             </div>
             <!-- <h3>Software Used:</h3>
