--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
         <script>
             loadPagePart('header.html', 'header');
             loadPagePart('footer.html', 'footer');
+            loadTiles('summary-content', '../json/content-summary.json');
         </script>
         <span id="header">
             
@@ -33,47 +34,12 @@
                             especially on native applications with C++, C#, or Java.
                         </p>
                     </div>
-                    <span class="tiles">
-                        <div class="tile-medium acrylic child" id="tile-0">
-                            <table class="tile-table">
-                                <tr>
-                                    <th class="tile-info acrylic child"><p><b>Clients</b></p></th>
-                                </tr>
-                                <tr>
-                                    <td class="tile-content"><p>0</p></td>
-                                </tr>
-                                <tr>
-                                    <td class="tile-description"><p>I'm seeking for experience</p></td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="tile-medium acrylic child" id="tile-1">
-                            <table>
-                                <tr>
-                                    <th><p>Title</p></th>
-                                </tr>
-                                <tr>
-                                    <td><p>Content</p></td>
-                                </tr>
-                                <tr>
-                                    <td><p>Description</p></td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="tile-medium acrylic child" id="tile-2">
-                            <table>
-                                <tr>
-                                    <th><p>Title</p></th>
-                                </tr>
-                                <tr>
-                                    <td><p>Content</p></td>
-                                </tr>
-                                <tr>
-                                    <td><p>Description</p></td>
-                                </tr>
-                            </table>
-                        </div>
-                    </span>  
+                    <span class="tiles" id="summary-contents">
+                        
+                    </span>
+                    <div class="plaintext dark">
+                        <p>* Self-studying and school-related experience only.</p>
+                    </div>
                     <br>
                 </section>
             </div>
