24w16i: Add more information

--- a/html/index.html
+++ b/html/index.html
@@ -29,8 +29,8 @@
                     <div class="plaintext dark">
                         <br>
                         <h1 class="title">Charles Martin</h1>
-                        <p class="subtitle">Software Developer - Specialized on Native Applications<p>
-                        <p>A Computer Science student who aspires to become a software developer,
+                        <h2 class="subtitle">Software Developer - Specialized on Native Applications</h2>
+                        <p>An object-oriented computer science student who aspires to become a software developer,
                             especially on native applications with C++, C#, or Java.
                         </p>
                     </div>
