--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,8 @@
                     <span class="tiles" id="summary-contents">
                         
                     </span>
+                    <button onclick='window.location.href = "projects.html";'>My Projects</button>
+                    <button onclick='window.location.href = "projects.html";'>Resume and CV</button>
                     <div class="plaintext dark">
                         <p>* Excluding blank, forked, and several unwanted repos. Only 16 out of 44 repositories are actual projects and 13 out of 44 repositories are public.</p>
                         <p>** Includes a major project from school (ComParts Website). Does not include years of self-studying, lecture and laboratory experience from schools.</p>
