--- a/html/header.html
+++ b/html/header.html
@@ -8,7 +8,6 @@
 <nav>
     <span class="acrylic parent shadow" id="navbar">
         <span class="toolbar">
-            <a id="nav-menu" class="nav-dropdown"><p>Menu</p></a>
             <span id="nav-dropdown-content">
                 <a id="nav-about" href="about.html" onClick="onNavClick('nav-about')"><p>About</p></a>
                 <!-- <a id="nav-studies" href="studies.html" onClick="onNavClick('nav-studies')"><p>Studies</p></a> -->
@@ -16,7 +15,8 @@
                 <a id="nav-projects" href="projects.html" onClick="onNavClick('nav-projects')"><p>Projects</p></a>
                 <a id="nav-index" href="index.html" onClick="onNavClick('nav-index')"><p>Home</p></a>
             </span>
-            
+            <a id="nav-menu" class="nav-dropdown" onclick="showMenu()"><p>Menu</p></a>
+            <a id="nav-back" class="nav-dropdown" onclick="closeMenu()"><p>Back</p></a>
         </span>
         <!-- <script>
             function onNavClick(id){
