24w17a: Headers and Font Family

--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,9 @@
         </span>
         <section id="content">
             <div class="plaintext">
-                <h1>About Me.</h1>
+                <div class="plaintext">
+                    <h1 class="title">About</h1>
+                </div>
                 <ul>
                     <li><p>Started learning to code at mid-2018 (C++) and started making a software on early 2020 as a hobby.</p></li>
                     <ul>
