--- a/html/projects.html
+++ b/html/projects.html
@@ -20,6 +20,9 @@
         </span>
         <!-- @NOTE: Move this in a JSON File -->
         <section id="content">
+            <div class="plaintext">
+                <h1 class="title">Projects</h1>
+            </div>
             <!-- <h2>Self-Projects (Hobbies)</h2> -->
             <div id="projects">
                 <!-- <div class="project item" id="project-1">
