--- a/html/resume.html
+++ b/html/resume.html
@@ -16,6 +16,9 @@
             
         </span>
         <section id="content">
+            <div class="plaintext">
+                <h1 class="title">Resume</h1>
+            </div>
             <div class="resume item">
                 <section class="item-block acrylic parent shadow">
                     <h3 class="title">Resume</h3>
